# fundlens-public

./: .gitignore  DEPLOY_REVISION  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
data/: README.md  ia_funds.csv
docs/: DEPLOYMENT.md  METHODOLOGY.md
scripts/: build_snapshot.py  cloud_smoke.py  smoke_data.py  validate_funds.py  yahoo_cache_smoke.py
src/fundlens/: __init__.py  __main__.py  _cloud_chrome.py  cache.py  cli.py  config.py  pipeline.py  screening.py
src/fundlens/analysis/: alpha_ladder.py  attribution.py  factor_model.py  flags.py  holdings_analytics.py  manager_dd.py  questions.py  returns.py  style.py
src/fundlens/data/: benchmark_map.yaml  benchmarks.py  factors.py  ft_markets.py  fundamentals.py  fx.py  holdings.py  ia_universe.py  navs.py  resolver.py  snapshot.py  universe.py  yahoo.py
src/fundlens/data/snapshot_data/: ia_screen_results.parquet
src/fundlens/report/: builder.py  figures.py  labels.py  view.py
src/fundlens/report/templates/: report.html.j2
src/fundlens/ui/: __init__.py  streamlit_app.py
tests/: test_cache.py  test_cloud_chrome.py  test_config.py  test_config_env_chain.py  test_flags.py  test_ia_universe.py  test_launcher.py  test_manager_dd.py  test_pipeline_questions.py  test_questions.py  test_report.py  test_resolver_search.py  test_scaffold.py  test_screening.py  test_universe.py
tests/analysis/: test_alpha_ladder.py  test_attribution.py  test_factor_model.py  test_holdings_analytics.py  test_returns.py  test_style.py
tests/data/: test_benchmarks.py  test_factors.py  test_ft_markets.py  test_fx.py  test_snapshot.py  test_yahoo_provider.py
tests/ui/: test_codex_button_gate.py
