[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundlens"
version = "0.1.0"
description = "Factor decomposition and alpha analysis toolkit for fund holdings and returns."
requires-python = ">=3.12"
readme = { text = "fundlens: factor decomposition and alpha analysis toolkit.", content-type = "text/plain" }
dependencies = [
    "pandas",
    "numpy",
    "statsmodels",
    "scipy",
    "plotly",
    "jinja2",
    "typer",
    "pyarrow",
    "platformdirs",
    "python-dotenv",
    "requests",
    "pyyaml",
    "yfinance",
    "mstarpy",
    "pandas-datareader",
    "openpyxl",
]

[project.optional-dependencies]
ui = ["streamlit"]
dev = ["pytest", "streamlit"]

[project.scripts]
fundlens = "fundlens.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

# Ship non-.py resources inside the wheel. Without this, a wheel install
# (e.g. on Streamlit Cloud, which runs `pip install -r requirements.txt`)
# omits benchmark_map.yaml, the report template, and the IA snapshot —
# breaking benchmarks, the Analyse tab's HTML report, and the Snapshot
# screen source. The `.py` files are included automatically; this declares
# the data files explicitly.
[tool.setuptools.package-data]
"fundlens.data" = ["*.yaml", "snapshot_data/*"]
"fundlens.report" = ["templates/*.j2"]
